--- a/_includes/front-contact.html
+++ b/_includes/front-contact.html
@@ -9,7 +9,7 @@
             </div>
         <div class="col-lg-2 col-lg-offset-2 text-center">
             <a href="https://twitter.com/{{ site.social.twitter }}" target="_blank" aria-label="WIREbruin on twitter">
-                <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <i class="fab fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
               
             </a>
         </div>
