--- a/_includes/front-contact.html
+++ b/_includes/front-contact.html
@@ -15,13 +15,13 @@
         </div>
           <div class="col-lg-2 col-lg-offset-1 text-center">
             <a href="https://facebook.com/{{ site.social.facebook }}" target="_blank" aria-label="WIREbruin on facebook">
-            <i class="fa fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            <i class="fab fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
               
             </a>
         </div>
             <div class="col-lg-2 col-lg-offset-1 text-center">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfhNlhf87K5P7YOXaYJ0gpArdwZZwvV77hZa9ow_8pSDWUf7Q/viewform" target="_blank" aria-label="Email the WI+RE team">
-            <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            <i class="fab fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                
             </a>
         </div>
