--- a/_includes/front-nav.html
+++ b/_includes/front-nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">WI+RE: Writing Instruction and Research Education</a>
+            <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
