--- a/_includes/front-for-students.html
+++ b/_includes/front-for-students.html
@@ -8,7 +8,9 @@
             </div>
         </div>
     </div>
+    <!-- start category features -->
     <div class="container">
+        <!-- first row of category features -->
         <div class="row">
             <div class="col-md-4 text-center">
                 <div class="service-box">
@@ -24,29 +26,28 @@
                     <p class="text-muted">Learn practical strategies to search for books, articles, and more.</p>
                 </div>
             </div>
-            <!-- coming soon!
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fa fa-4x fa-pencil-square-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3><a href="{{ "/categories/writing-with-sources" | prepend: site.baseurl}}">Writing with Sources</a></h3>
-                    <p class="text-muted">Coming soon! Learn how to integrate your sources into your academic writing.</p>
-                </div>
-            </div>
-            -->
             <div class="col-md-4 text-center">
                 <div class="service-box">
-                    <i class="far fa-4x fa-file-alt wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3><a href="{{ "/categories/literature-reviews" | prepend: site.baseurl}}">Literature Reviews</a></h3>
-                    <p class="text-muted">Get ready to analyze the literature on your topic and identify areas for future scholarship.</p>
+                    <i class="fas fa-4x fa-pencil-alt wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <h3><a href="{{ "/categories/writing-with-sources" | prepend: site.baseurl}}">Writing with Sources</a></h3>
+                    <p class="text-muted">Learn how to integrate your sources into your academic writing.</p>
                 </div>
             </div>
         </div>
+        <!-- second row of category features -->
         <div class="row"> 
-            <div class="col-lg-12 col-md-12 text-center">
+            <div class="col-md-6 text-center">
                 <div class="service-box">
                     <i class="far fa-4x fa-comments wow bounceIn text-primary" data-wow-delay=".4s"></i>
                     <h3><a href="{{ "/categories/sharing-your-research" | prepend: site.baseurl}}">Sharing your Research</a></h3>
                     <p class="text-muted">A quick introduction to abstracts, elevator speeches, and opportunities to share your work.</p>
+                </div>
+            </div>
+            <div class="col-md-6 text-center">
+                <div class="service-box">
+                    <i class="far fa-4x fa-file-alt wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <h3><a href="{{ "/categories/literature-reviews" | prepend: site.baseurl}}">Literature Reviews</a></h3>
+                    <p class="text-muted">Get ready to analyze the literature on your topic and identify areas for future scholarship.</p>
                 </div>
             </div>
         </div>
