fan out wow delay in for students category feature

--- a/_includes/front-for-students.html
+++ b/_includes/front-for-students.html
@@ -14,21 +14,21 @@
         <div class="row">
             <div class="col-md-4 text-center">
                 <div class="service-box">
-                    <i class="far fa-lightbulb fa-4x wow bounceIn text-primary"></i>
+                    <i class="far fa-lightbulb fa-4x wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3><a href="{{ "/categories/getting-started" | prepend: site.baseurl}}">Getting Started</a></h3>
                     <p class="text-muted">Generating research questions, planning your project, and getting ready for research.</p>
                 </div>
             </div>
             <div class="col-md-4 text-center">
                 <div class="service-box">
-                    <i class="fas fa-4x fa-search wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <i class="fas fa-4x fa-search wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3><a href="{{ "/categories/finding-and-citing-sources" | prepend: site.baseurl }}">Finding and Citing Sources</a></h3>
                     <p class="text-muted">Learn practical strategies to search for books, articles, and more.</p>
                 </div>
             </div>
             <div class="col-md-4 text-center">
                 <div class="service-box">
-                    <i class="fas fa-4x fa-pencil-alt wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <i class="fas fa-4x fa-pencil-alt wow bounceIn text-primary" data-wow-delay=".4s"></i>
                     <h3><a href="{{ "/categories/writing-with-sources" | prepend: site.baseurl}}">Writing with Sources</a></h3>
                     <p class="text-muted">Learn how to integrate your sources into your academic writing.</p>
                 </div>
@@ -38,14 +38,14 @@
         <div class="row"> 
             <div class="col-md-6 text-center">
                 <div class="service-box">
-                    <i class="far fa-4x fa-comments wow bounceIn text-primary" data-wow-delay=".4s"></i>
+                    <i class="far fa-4x fa-comments wow bounceIn text-primary" data-wow-delay=".5s"></i>
                     <h3><a href="{{ "/categories/sharing-your-research" | prepend: site.baseurl}}">Sharing your Research</a></h3>
                     <p class="text-muted">A quick introduction to abstracts, elevator speeches, and opportunities to share your work.</p>
                 </div>
             </div>
             <div class="col-md-6 text-center">
                 <div class="service-box">
-                    <i class="far fa-4x fa-file-alt wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <i class="far fa-4x fa-file-alt wow bounceIn text-primary" data-wow-delay=".6s"></i>
                     <h3><a href="{{ "/categories/literature-reviews" | prepend: site.baseurl}}">Literature Reviews</a></h3>
                     <p class="text-muted">Get ready to analyze the literature on your topic and identify areas for future scholarship.</p>
                 </div>
