test for instructors with cards

--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -1,23 +1,58 @@
 <section class="bg-primary" id="for-instructors">
+    <h2 class="section-heading">Improve student writing and research skills with our easy to implement online assignments.</h2>
     <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
-                <h2 class="section-heading">Improve student writing and research skills with our easy to implement online assignments.</h2>
-                <hr class="light">
-                    <img src="{{ "/assets/img/front/incorporating-research-and-writing-skills.png" | prepend: site.baseurl}}" class="img-responsive"  style="margin-bottom: 5px;" alt="Research and Writing Modules can be integrated into CCLE or other course sites."><br>
-                    <p> <!--class="text-faded"-->
-                    Adding WI+RE modules to your CCLE site or integrating them into your syllabus is easy. Instructors from north and south campus have successfully included the modules as required, extra credit, and optional assignments.</p>
-        <!--
-            <div class="text-left">
-        <h3>Student feedback</h3>
-        <p>95% of Psychology 188B students reported that the online modules incorporated into their CCLE site were helpful or very helpful with their research process.</p>
-            <blockquote>“I have been using these databases for years but these strategies and activities were very novel. It changed the way I analyzed my data and thought of new ideas.” - student feedback</blockquote>
--->
-            <p>Contact the WI+RE team to learn more about integrating WI+RE modules into your courses.</p>
-        <div class="text-center">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfhNlhf87K5P7YOXaYJ0gpArdwZZwvV77hZa9ow_8pSDWUf7Q/viewform" target="_blank" class="btn btn-default btn-xl">Contact the WI+RE team</a>
+<div class="row">
+    <div class="col s12 m6 l3">
+      <div class="card">    
+          <img class="responsive-img" src="{{ '/assets/img/content/website.png' | prepend: site.baseurl }}">
+         <span class="card-title black-text"><center>Website, YouTube, Social Media</center></span>
+        <div class="card-content">
+          <p>Our modules are quick and practical and cover everything from reading strategies, to integrating citations, to turning questions into keywords! Our materials are open source and you are free to share them however you see fit!</p>
         </div>
-    </div> 
+        <div class="card-action">
+           <a href="https://youtu.be/hhv8PIFHvek">YouTube</a> <a href="https://www.facebook.com/WIREbruin/">Facebook</a> <a href="https://twitter.com/WIREbruin">Twitter</a>
         </div>
+      </div>
+    </div>
+   
+   <div class="col s12 m6 l3">
+      <div class="card">
+          <img class="responsive-img" src="{{ '/assets/img/content/ccle.png' | prepend: site.baseurl }}">
+   <span class="card-title"><center>CCLE Integration</center></span>
+        <div class="card-content">
+          <p>We have turned some of our videos and activities into a series of quizzes on CCLE that build foundational research skills. We can help you select relevant modules and integrate them into your course website!</p>
+        </div>
+        <div class="card-action">
+          <a href="https://ccle.ucla.edu/course/view/wire">CCLE Site</a>
+        </div>
+      </div>
+    </div>
+    
+   <div class="col s12 m6 l3">
+      <div class="card">
+          <img class="responsive-img" src="{{ '/assets/img/content/googledoc.png' | prepend: site.baseurl }}">
+   <span class="card-title"><center>Research Notebook</center></span>
+        <div class="card-content">
+          <p>Our research notebook is a customizable Google Doc that houses some of our resources but also lets the student work towards a specific research project or assignment.</p>
+        </div>
+        <div class="card-action">
+          <a href="https://docs.google.com/document/d/18cGmQSk-kBKKgR8B9YYe2DP5EFHPRn2affxb_u6gj3I/edit?usp=sharing">Research Notebook</a>
+        </div>
+      </div>
+    </div>
+    
+   <div class="col s12 m6 l3">
+      <div class="card">
+          <img class="responsive-img" src="{{ '/assets/img/content/integration.png' | prepend: site.baseurl }}">
+          <span class="card-title"><center>Custom Projects</center></span>
+        <div class="card-content">
+          <p>We are happy to work with you to create a CCLE module, Research Notebook, or video/activity that fits your class’s needs. Let us know what you are looking for and we can chat about how WI+RE can best help!</p>
+        </div>
+        <div class="card-action">
+          <a href="https://youtu.be/d0a_XLPG07w">Examples</a>
+        </div>
+      </div>
+    </div>
+  </div>
     </div>
 </section>
