--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -1,21 +1,36 @@
 <section class="bg-primary" id="for-instructors">
-    <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
-                <h2 class="section-heading">Improve student writing and research skills with our easy to implement online assignments.</h2>
-                <hr class="light">
-                    <img src="{{ "/assets/img/front/incorporating-research-and-writing-skills.png" | prepend: site.baseurl}}" class="img-responsive"  style="margin-bottom: 5px;" alt="Research and Writing Modules can be integrated into CCLE or other course sites."><br>
-                    <p> <!--class="text-faded"-->
-                    Adding WI+RE modules to your CCLE site or integrating them into your syllabus is easy. Instructors from north and south campus have successfully included the modules as required, extra credit, and optional assignments.</p>
-        <!--
-            <div class="text-left">
-        <h3>Student feedback</h3>
-        <p>95% of Psychology 188B students reported that the online modules incorporated into their CCLE site were helpful or very helpful with their research process.</p>
-            <blockquote>“I have been using these databases for years but these strategies and activities were very novel. It changed the way I analyzed my data and thought of new ideas.” - student feedback</blockquote>
--->
-            <p>Contact the WI+RE team to learn more about integrating WI+RE modules into your courses.</p>
-        <div class="text-center">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfhNlhf87K5P7YOXaYJ0gpArdwZZwvV77hZa9ow_8pSDWUf7Q/viewform" target="_blank" class="btn btn-default btn-xl">Contact the WI+RE team</a>
+        <div class="container">
+        <div class="row">
+            <div class="col-md-4 text-center">
+                <div class="service-box">
+                    <img width="70%" src="{{ '/assets/img/content/website.png' | prepend: site.baseurl }}">
+                    <h3>Website, YouTube, Social Media</h3>
+                    <p class="text-muted">Our modules are quick and practical and cover everything from reading strategies, to integrating citations, to turning questions into keywords! Our materials are open source and you are free to share them however you see fit!</p>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-search wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <h3>Finding and Citing Sources</h3>
+                    <p class="text-muted">Learn practical strategies to search for books, articles, and more.</p>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-file-text-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <h3>Literature Reviews</h3>
+                    <p class="text-muted">Get ready to analyze the literature on your topic and identify areas for future scholarship.</p>
+                </div>
+            </div>
         </div>
-    </div> 
+        <div class="row"> 
+            <div class="col-lg-12 col-md-12 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-comments-o wow bounceIn text-primary" data-wow-delay=".4s"></i>
+                    <h3>Sharing your Research</h3>
+                    <p class="text-muted">A quick introduction to abstracts, elevator speeches, and opportunities to share your work.</p>
+                </div>
+            </div>
         </div>
+    </div>
 </section>
