add title and icons

--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -1,34 +1,43 @@
 <section class="bg-primary" id="for-instructors">
         <div class="container">
         <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">For Instructors</h2>
+                <p><em>Improve student writing and research skills with our easy to implement online assignments.</em></p>
+                <hr class="primary">
+            </div>
+        </div>
+    </div>
+        <div class="container">
+        <div class="row">
             <div class="col-md-4 text-center">
                 <div class="service-box">
                     <img width="70%" src="{{ '/assets/img/content/website.png' | prepend: site.baseurl }}">
                     <h3>Website, YouTube, Social Media</h3>
-                    <p class="text-muted">Our modules are quick and practical and cover everything from reading strategies, to integrating citations, to turning questions into keywords! Our materials are open source and you are free to share them however you see fit!</p>
+                    <p>Our modules are quick and practical and cover everything from reading strategies, to integrating citations, to turning questions into keywords! Our materials are open source and you are free to share them however you see fit!</p>
                 </div>
             </div>
             <div class="col-md-4 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-search wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Finding and Citing Sources</h3>
-                    <p class="text-muted">Learn practical strategies to search for books, articles, and more.</p>
+                    <img class="responsive-img" src="{{ '/assets/img/content/ccle.png' | prepend: site.baseurl }}">
+                    <h3>CCLE Integration</h3>
+                    <p class="text-muted">We have turned some of our videos and activities into a series of quizzes on CCLE that build foundational research skills. We can help you select relevant modules and integrate them into your course website!</p>
                 </div>
             </div>
             <div class="col-md-4 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-file-text-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Literature Reviews</h3>
-                    <p class="text-muted">Get ready to analyze the literature on your topic and identify areas for future scholarship.</p>
+                    <img class="responsive-img" src="{{ '/assets/img/content/googledoc.png' | prepend: site.baseurl }}">
+                    <h3>Research Notebook</h3>
+                    <p class="text-muted">Our research notebook is a customizable Google Doc that houses some of our resources but also lets the student work towards a specific research project or assignment.</p>
                 </div>
             </div>
         </div>
         <div class="row"> 
             <div class="col-lg-12 col-md-12 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-comments-o wow bounceIn text-primary" data-wow-delay=".4s"></i>
+                    <img class="responsive-img" src="{{ '/assets/img/content/integration.png' | prepend: site.baseurl }}">
                     <h3>Sharing your Research</h3>
-                    <p class="text-muted">A quick introduction to abstracts, elevator speeches, and opportunities to share your work.</p>
+                    <p class="text-muted">We are happy to work with you to create a CCLE module, Research Notebook, or video/activity that fits your class’s needs. Let us know what you are looking for and we can chat about how WI+RE can best help!</p>
                 </div>
             </div>
         </div>
