--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -19,14 +19,14 @@
             </div>
             <div class="col-md-4 text-center">
                 <div class="service-box">
-                    <img class="responsive-img" src="{{ '/assets/img/content/ccle.png' | prepend: site.baseurl }}">
+                    <img width="70%" src="{{ '/assets/img/content/ccle.png' | prepend: site.baseurl }}">
                     <h3>CCLE Integration</h3>
                     <p class="text-muted">We have turned some of our videos and activities into a series of quizzes on CCLE that build foundational research skills. We can help you select relevant modules and integrate them into your course website!</p>
                 </div>
             </div>
             <div class="col-md-4 text-center">
                 <div class="service-box">
-                    <img class="responsive-img" src="{{ '/assets/img/content/googledoc.png' | prepend: site.baseurl }}">
+                    <img width="70%" src="{{ '/assets/img/content/googledoc.png' | prepend: site.baseurl }}">
                     <h3>Research Notebook</h3>
                     <p class="text-muted">Our research notebook is a customizable Google Doc that houses some of our resources but also lets the student work towards a specific research project or assignment.</p>
                 </div>
@@ -35,7 +35,7 @@
         <div class="row"> 
             <div class="col-lg-12 col-md-12 text-center">
                 <div class="service-box">
-                    <img class="responsive-img" src="{{ '/assets/img/content/integration.png' | prepend: site.baseurl }}">
+                    <img width="70%" src="{{ '/assets/img/content/integration.png' | prepend: site.baseurl }}">
                     <h3>Sharing your Research</h3>
                     <p class="text-muted">We are happy to work with you to create a CCLE module, Research Notebook, or video/activity that fits your class’s needs. Let us know what you are looking for and we can chat about how WI+RE can best help!</p>
                 </div>
