--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -33,7 +33,7 @@
                     <p>Our research notebook is a customizable Google Doc that houses some of our resources but also lets the student work towards a specific research project or assignment.</p>
                 </div>
             </div>
-            <div class="col-lg-12 col-md-12 text-center">
+            <div class="col-md-4 text-center">
                 <div class="service-box">
                     <img width="70%" src="{{ '/assets/img/content/integration.png' | prepend: site.baseurl }}">
                     <h3>Sharing your Research</h3>
