--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -2,13 +2,13 @@
         <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">For Instructors</h2>
-                <p><em>Improve student writing and research skills with our easy to implement online assignments.</em></p>
+                <h2 class="section-heading">Integrate Research & Writing Support into Your Teaching</h2>
+                <p><em>Improve student writing and research skills with our easy to implement online assignments and tools.</em></p>
                 <hr class="primary">
             </div>
         </div>
     </div>
-        <div class="container">
+        <div class="container" width="100%">
         <div class="row">
             <div class="col-md-4 text-center">
                 <div class="service-box">
