--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -12,32 +12,36 @@
         <div class="row">
             <div class="col-md-6 text-center">
                 <div class="service-box">
-                    <img width="50%" src="{{ '/assets/img/content/website.png' | prepend: site.baseurl }}">
+                    <img width="10%" src="{{ '/assets/img/content/website.png' | prepend: site.baseurl }}">
                     <h3>Website, YouTube, Social Media</h3>
                     <p>Our modules are quick and practical and cover everything from reading strategies, to integrating citations, to turning questions into keywords! Our materials are open source and you are free to share them however you see fit!</p>
+                        <p><a href="https://youtu.be/hhv8PIFHvek">YouTube</a> <a href="https://www.facebook.com/WIREbruin/">Facebook</a> <a href="https://twitter.com/WIREbruin">Twitter</a></p>
                 </div>
             </div>
             <div class="col-md-6 text-center">
                 <div class="service-box">
-                    <img width="50%" src="{{ '/assets/img/content/ccle.png' | prepend: site.baseurl }}">
+                    <img width="10%" src="{{ '/assets/img/content/ccle.png' | prepend: site.baseurl }}">
                     <h3>CCLE Integration</h3>
                     <p>We have turned some of our videos and activities into a series of quizzes on CCLE that build foundational research skills. We can help you select relevant modules and integrate them into your course website!</p>
+                        <p><a href="https://ccle.ucla.edu/course/view/wire">CCLE Site</a></p>
                 </div>
             </div>
                 </div>
         <div class="row"> 
             <div class="col-md-6 text-center">
                 <div class="service-box">
-                    <img width="50%" src="{{ '/assets/img/content/googledoc.png' | prepend: site.baseurl }}">
+                    <img width="10%" src="{{ '/assets/img/content/googledoc.png' | prepend: site.baseurl }}">
                     <h3>Research Notebook</h3>
                     <p>Our research notebook is a customizable Google Doc that houses some of our resources but also lets the student work towards a specific research project or assignment.</p>
+                        <p><a href="https://docs.google.com/document/d/18cGmQSk-kBKKgR8B9YYe2DP5EFHPRn2affxb_u6gj3I/edit?usp=sharing">Research Notebook</a></p>
                 </div>
             </div>
             <div class="col-md-6 text-center">
                 <div class="service-box">
-                    <img width="50%" src="{{ '/assets/img/content/integration.png' | prepend: site.baseurl }}">
+                    <img width="10%" src="{{ '/assets/img/content/integration.png' | prepend: site.baseurl }}">
                     <h3>Sharing your Research</h3>
                     <p>We are happy to work with you to create a CCLE module, Research Notebook, or video/activity that fits your class’s needs. Let us know what you are looking for and we can chat about how WI+RE can best help!</p>
+                        <p><a href="https://youtu.be/d0a_XLPG07w">Examples</a></p>
                 </div>
             </div>
         </div>
