--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -10,7 +10,7 @@
     </div>
         <div class="container" width="100%">
         <div class="row">
-            <div class="col-md-6-lg-3 text-center">
+            <div class="col-md-6 lg-3 text-center">
                 <div class="service-box">
                     <img width="25%" src="{{ '/assets/img/content/website.png' | prepend: site.baseurl }}">
                     <h3>Website, YouTube, Social Media</h3>
@@ -18,7 +18,7 @@
                         <p><a href="https://youtu.be/hhv8PIFHvek">YouTube</a> <a href="https://www.facebook.com/WIREbruin/">Facebook</a> <a href="https://twitter.com/WIREbruin">Twitter</a></p>
                 </div>
             </div>
-            <div class="col-md-6-lg-3 text-center">
+            <div class="col-md-6 lg-3 text-center">
                 <div class="service-box">
                     <img width="25%" src="{{ '/assets/img/content/ccle.png' | prepend: site.baseurl }}">
                     <h3>CCLE Integration</h3>
@@ -28,7 +28,7 @@
             </div>
                 </div>
         <div class="row"> 
-            <div class="col-md-6-lg-3 text-center">
+            <div class="col-md-6 lg-3 text-center">
                 <div class="service-box">
                     <img width="25%" src="{{ '/assets/img/content/googledoc.png' | prepend: site.baseurl }}">
                     <h3>Research Notebook</h3>
@@ -36,7 +36,7 @@
                         <p><a href="https://docs.google.com/document/d/18cGmQSk-kBKKgR8B9YYe2DP5EFHPRn2affxb_u6gj3I/edit?usp=sharing">Research Notebook</a></p>
                 </div>
             </div>
-            <div class="col-md-6-lg-3 text-center">
+            <div class="col-md-6 lg-3 text-center">
                 <div class="service-box">
                     <img width="25%" src="{{ '/assets/img/content/integration.png' | prepend: site.baseurl }}">
                     <h3>Sharing your Research</h3>
