--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -14,8 +14,8 @@
                 <div class="service-box">
                     <img width="25%" src="{{ '/assets/img/content/website.png' | prepend: site.baseurl }}">
                     <h3>Website, YouTube, Social Media</h3>
-                    <p>Our modules are quick and practical and cover everything from reading strategies, to integrating citations, to turning questions into keywords! Our materials are open source and you are free to share them however you see fit!</p>
-                        <p><a href="https://youtu.be/hhv8PIFHvek">YouTube</a> <a href="https://www.facebook.com/WIREbruin/">Facebook</a> <a href="https://twitter.com/WIREbruin">Twitter</a></p>
+                    <p>Our modules are quick and practical and cover everything from reading strategies, to integrating citations, to turning questions into keywords! Our materials are open source and you are free to share them however you see fit!
+                        <br><a href="https://youtu.be/hhv8PIFHvek">YouTube</a> <a href="https://www.facebook.com/WIREbruin/">Facebook</a> <a href="https://twitter.com/WIREbruin">Twitter</a></p>
                 </div>
             </div>
             <div class="col-md-6 lg-3 text-center">
