--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -13,7 +13,7 @@
             <div class="col-md-3 text-center">
                 <div class="service-box">
                     <img width="25%" src="{{ '/assets/img/content/website.png' | prepend: site.baseurl }}">
-                    <h3>Website, YouTube, Social Media EDITED</h3>
+                    <h3>Website, YouTube, Social Media</h3>
                     <p>Our modules are quick and practical and cover everything from reading strategies, to integrating citations, to turning questions into keywords! Our materials are open source and you are free to share them however you see fit!
                         <br><a href="https://youtu.be/hhv8PIFHvek">YouTube</a> <a href="https://www.facebook.com/WIREbruin/">Facebook</a> <a href="https://twitter.com/WIREbruin">Twitter</a></p>
                 </div>
@@ -27,7 +27,6 @@
                 </div>
             </div>
                 </div>
-        <div class="row"> 
             <div class="col-md-3 text-center">
                 <div class="service-box">
                     <img width="25%" src="{{ '/assets/img/content/googledoc.png' | prepend: site.baseurl }}">
@@ -42,7 +41,6 @@
                     <h3>Sharing your Research</h3>
                     <p>We are happy to work with you to create a CCLE module, Research Notebook, or video/activity that fits your class’s needs. Let us know what you are looking for and we can chat about how WI+RE can best help!</p>
                         <p><a href="https://youtu.be/d0a_XLPG07w">Examples</a></p>
-                </div>
             </div>
         </div>
 </section>
