--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -13,7 +13,7 @@
             <div class="col-md-3 text-center">
                 <div class="service-box">
                     <img width="30%" src="{{ '/assets/img/content/website.png' | prepend: site.baseurl }}">
-                        <h3>Website, <a href="https://youtu.be/hhv8PIFHvek" style=“color: white;“>YouTube</a>, <a href="https://www.facebook.com/WIREbruin/" style=“color: white;“>Social Media</a></h3>
+                        <h3>Website, <a href="https://youtu.be/hhv8PIFHvek" style=“color:white;“>YouTube EDITED</a>, <a href="https://www.facebook.com/WIREbruin/" style=“color: white;“>Social Media</a></h3>
                         <h3><a href="{{ "/categories/getting-started" | prepend: site.baseurl}}">Getting Started</a></h3>
                     <p>Our modules are quick and practical and cover everything from reading strategies, to integrating citations, to turning questions into keywords! Our materials are open source and you are free to share them however you see fit!</p>
                 </div>
@@ -21,7 +21,7 @@
             <div class="col-md-3 text-center">
                 <div class="service-box">
                     <img width="30%" src="{{ '/assets/img/content/ccle.png' | prepend: site.baseurl }}">
-                    <h3><a href="https://ccle.ucla.edu/course/view/wire">CCLE Integration</a></h3>
+                    <h3><a href="https://ccle.ucla.edu/course/view/wire" style="color:white">CCLE Integration</a></h3>
                     <p>We have turned some of our videos and activities into a series of quizzes on CCLE that build foundational research skills. We can help you select relevant modules and integrate them into your course website!</p>
                 </div>
             </div>
