--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -13,7 +13,7 @@
             <div class="col-md-3 text-center">
                 <div class="service-box">
                     <img width="30%" src="{{ '/assets/img/content/website.png' | prepend: site.baseurl }}">
-                        <h3>Website, <a href="https://youtu.be/hhv8PIFHvek" style=“color:white;“>YouTube EDITED</a>, <a href="https://www.facebook.com/WIREbruin/" style=“color: white;“>Social Media</a></h3>
+                        <h3>Website, <a href="https://youtu.be/hhv8PIFHvek" style=“color:white“>YouTube EDITED</a>, <a href="https://www.facebook.com/WIREbruin/" style=“color:white“>Social Media</a></h3>
                         <h3><a href="{{ "/categories/getting-started" | prepend: site.baseurl}}">Getting Started</a></h3>
                     <p>Our modules are quick and practical and cover everything from reading strategies, to integrating citations, to turning questions into keywords! Our materials are open source and you are free to share them however you see fit!</p>
                 </div>
@@ -28,14 +28,14 @@
             <div class="col-md-3 text-center">
                 <div class="service-box">
                     <img width="30%" src="{{ '/assets/img/content/googledoc.png' | prepend: site.baseurl }}">
-                    <h3><a href="https://docs.google.com/document/d/18cGmQSk-kBKKgR8B9YYe2DP5EFHPRn2affxb_u6gj3I/edit?usp=sharing">Research Notebook</a></h3>
+                    <h3><a href="https://docs.google.com/document/d/18cGmQSk-kBKKgR8B9YYe2DP5EFHPRn2affxb_u6gj3I/edit?usp=sharing" style=“color:white“>Research Notebook</a></h3>
                     <p>Our research notebook is a customizable Google Doc that houses some of our resources but also lets the student work towards a specific research project or assignment.</p>
                 </div>
             </div>
             <div class="col-md-3 text-center">
                 <div class="service-box">
                     <img width="30%" src="{{ '/assets/img/content/integration.png' | prepend: site.baseurl }}">
-                    <h3><a href="https://youtu.be/d0a_XLPG07w">Sharing your Research</a></h3>
+                    <h3><a href="https://youtu.be/d0a_XLPG07w" style=“color:white“>Sharing your Research</a></h3>
                     <p>We are happy to work with you to create a CCLE module, Research Notebook, or video/activity that fits your class’s needs. Let us know what you are looking for and we can chat about how WI+RE can best help!</p>
             </div>
         </div>
