--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -35,7 +35,7 @@
             <div class="col-md-3 text-center">
                 <div class="service-box">
                     <img width="30%" src="{{ '/assets/img/content/integration.png' | prepend: site.baseurl }}">
-                    <h3><a href="https://youtu.be/d0a_XLPG07w" style="color:white">Sharing your Research</a></h3>
+                    <h3><a href="https://youtu.be/d0a_XLPG07w" style="color:white">Customization</a></h3>
                     <p>We are happy to work with you to create a CCLE module, Research Notebook, or video/activity that fits your class’s needs. Let us know what you are looking for and we can chat about how WI+RE can best help!</p>
             </div>
         </div>
