--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -10,7 +10,7 @@
     </div>
         <div class="container" width="100%">
         <div class="row">
-            <div class="col-md-3 text-center" style="background-color:white">
+            <div class="col-md-3 text-center">
                 <div class="service-box">
                     <img width="30%" src="{{ '/assets/img/content/website.png' | prepend: site.baseurl }}">
                         <h3><a href="{{ site.baseurl}}/categories" style="color:white">Website</a>, <a href="https://youtu.be/hhv8PIFHvek" style="color:white">YouTube</a>, <a href="https://www.facebook.com/WIREbruin/" style="color:white">Social Media</a></h3>
