--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -14,28 +14,28 @@
                 <div class="service-box">
                     <img width="30%" src="{{ '/assets/img/content/website.png' | prepend: site.baseurl }}">
                         <h3><a href="{{ site.baseurl}}/categories" style="color:white">Website</a>, <a href="https://youtu.be/hhv8PIFHvek" style="color:white">YouTube</a>, <a href="https://www.facebook.com/WIREbruin/" style="color:white">Social Media</a></h3>
-                    <p>Our modules are quick and practical and cover everything from reading strategies, to integrating citations, to turning questions into keywords! Our materials are open source and you are free to share them however you see fit!</p>
+                    <p>Our quick and practical learning modules include topics like reading strategies, integrating citations, and finding scholarly articles. Our materials are open source, so feel free to share!</p>
                 </div>
             </div>
             <div class="col-md-3 text-center">
                 <div class="service-box">
                     <img width="30%" src="{{ '/assets/img/content/ccle.png' | prepend: site.baseurl }}">
                     <h3><a href="https://ccle.ucla.edu/course/view/wire" style="color:white">CCLE Integration</a></h3>
-                    <p>We have turned some of our videos and activities into a series of quizzes on CCLE that build foundational research skills. We can help you select relevant modules and integrate them into your course website!</p>
+                    <p>Our series of “Foundational Research Skills” activities and quizzes can be seamlessly integrated into your course website.</p>
                 </div>
             </div>
             <div class="col-md-3 text-center">
                 <div class="service-box">
                     <img width="30%" src="{{ '/assets/img/content/googledoc.png' | prepend: site.baseurl }}">
                     <h3><a href="https://docs.google.com/document/d/18cGmQSk-kBKKgR8B9YYe2DP5EFHPRn2affxb_u6gj3I/edit?usp=sharing" style="color:white">Research Notebook</a></h3>
-                    <p>Our research notebook is a customizable Google Doc that houses some of our resources but also lets the student work towards a specific research project or assignment.</p>
+                    <p>This customizable Google Doc will guide students through the process of working on a research paper or class assignment.</p>
                 </div>
             </div>
             <div class="col-md-3 text-center">
                 <div class="service-box">
                     <img width="30%" src="{{ '/assets/img/content/integration.png' | prepend: site.baseurl }}">
                     <h3><a href="https://youtu.be/d0a_XLPG07w" style="color:white">Customization</a></h3>
-                    <p>We are happy to work with you to create a CCLE module, Research Notebook, or video/activity that fits your class’s needs. Let us know what you are looking for and we can chat about how WI+RE can best help!</p>
+                    <p>We are happy to work with you to create a CCLE module, Research Notebook, or video/activity that fits the needs of your class. Contact us to chat about how WI+RE can help!</p>
             </div>
         </div>
   </div>
