--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -1,4 +1,4 @@
-<section class="bg-primary" id="for-instructors">
+<section class=".ucla-color.two-dark-blue" id="for-instructors">
         <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
