--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -4,7 +4,7 @@
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Integrate Research &amp; Writing Support into Your Teaching</h2>
                 <p><em>Improve student writing and research skills with our easy to implement online assignments and tools.</em></p>
-                <hr class="primary">
+                <hr class="primary" style="color:white">
             </div>
         </div>
     </div>
