--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Integrate Research &amp; Writing Support into Your Teaching</h2>
-                <p><em>Improve student writing and research skills with our easy to implement online assignments and tools.</em></p>
+                <p><em>Improve student writing and research skills with our easy-to-implement online assignments and tools.</em></p>
                 <hr class="primary" style="color:white">
             </div>
         </div>
