--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -40,8 +40,8 @@
         </div>
                  <BR>
                <div class="row">
-              <div class="col-md-6 center"><a href="{{ site.baseurl}}/categories" class="btn btn-default btn-xl"><i class="fas fa-list-ul" aria-hidden="true"></i> All Tutorials-updated</a> </div>
-              <div class="col-md-6 center"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfhNlhf87K5P7YOXaYJ0gpArdwZZwvV77hZa9ow_8pSDWUf7Q/viewform?usp=sf_link" target="_blank" class="btn btn-default btn-xl"><i class="far fa-comments" aria-hidden="true"></i> Contact WI+RE</a> </div> 
+              <div class="col-md-6"><a href="{{ site.baseurl}}/categories" class="btn btn-default btn-xl"><i class="fas fa-list-ul" aria-hidden="true"></i> All Tutorials</a> </div>
+              <div class="col-md-6"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfhNlhf87K5P7YOXaYJ0gpArdwZZwvV77hZa9ow_8pSDWUf7Q/viewform?usp=sf_link" target="_blank" class="btn btn-default btn-xl"><i class="far fa-comments" aria-hidden="true"></i> Contact WI+RE</a> </div> 
               </div>
   </div>
 </section>
