--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -44,4 +44,21 @@
               <div class="col-md-6"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfhNlhf87K5P7YOXaYJ0gpArdwZZwvV77hZa9ow_8pSDWUf7Q/viewform?usp=sf_link" target="_blank" class="btn btn-default btn-xl"><i class="far fa-comments" aria-hidden="true"></i> Contact WI+RE</a> </div> 
               </div>
   </div>
+                <div class="row">
+                    <div class="col-sm-4 text-center">
+                        <div class="service-box">
+                            <a href="#for-students" class="btn btn-primary btn-xl page-scroll">For students</a>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <div class="service-box">
+                            <a href="#for-instructors" class="btn btn-primary btn-xl page-scroll">For instructors</a>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <div class="service-box">
+                            <a href="/research-tips/categories" class="btn btn-primary btn-xl page-scroll">All Tutorials</a>
+                        </div>
+                    </div>
+                </div>
 </section>
