--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -43,7 +43,7 @@
                 <div class="row">
                     <div class="col-sm-6 text-center">
                         <div class="service-box">
-                            <a href="{{ site.baseurl}}/categories" class="btn btn-default btn-xl"><i class="fas fa-list-ul" aria-hidden="true"></i> All Tutorials</a>
+                            <a href="{{ site.baseurl}}/categories" class="btn btn-default btn-xl"><i class="fas fa-list-ul" aria-hidden="true"></i> Browse Tutorials</a>
                         </div>
                     </div>
                     <div class="col-sm-6 text-center">
