--- a/_includes/front-contact.html
+++ b/_includes/front-contact.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Keep in touch!</h2>
                 <p>We'd love to hear from you.</p>
-                <p>Get to know the WI+RE Team here.</p>
+                <p>Get to know the WI+RE Team <a href="{{ site.baseurl}}/about" style="color:white" target="_blank">here</a>.</p>
                 <hr class="primary">
               
             </div>
