--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -41,12 +41,17 @@
   </div>
                 <BR>
                 <div class="row">
-                    <div class="col-sm-6 text-center">
+                    <div class="col-sm-4 text-center">
                         <div class="service-box">
                             <a href="{{ site.baseurl}}/categories" class="btn btn-default btn-xl"><i class="fas fa-list-ul" aria-hidden="true"></i> Browse Tutorials</a>
                         </div>
                     </div>
-                    <div class="col-sm-6 text-center">
+                      <div class="col-sm-4 text-center">
+                        <div class="service-box">
+                            <a href="https://ccle.ucla.edu/course/view/wire" target="_blank" class="btn btn-default btn-xl"><i class="far fa-comments" aria-hidden="true"></i>Visit CCLE Site</a>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 text-center">
                         <div class="service-box">
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfhNlhf87K5P7YOXaYJ0gpArdwZZwvV77hZa9ow_8pSDWUf7Q/viewform?usp=sf_link" target="_blank" class="btn btn-default btn-xl"><i class="far fa-comments" aria-hidden="true"></i> Contact WI+RE</a>
                         </div>
