--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -48,7 +48,7 @@
                     </div>
                       <div class="col-sm-4 text-center">
                         <div class="service-box">
-                            <a href="https://ccle.ucla.edu/course/view/wire" target="_blank" class="btn btn-default btn-xl"><i class="far fa-comments" aria-hidden="true"></i>Visit CCLE Site</a>
+                            <a href="https://ccle.ucla.edu/course/view/wire" target="_blank" class="btn btn-default btn-xl"><i class="far fa-browser" aria-hidden="true"></i>Visit CCLE Site</a>
                         </div>
                     </div>
                     <div class="col-sm-4 text-center">
