--- a/_includes/postJSONLD.html
+++ b/_includes/postJSONLD.html
@@ -21,7 +21,7 @@
         "dateModified": "{% if page.modified %}{{page.modified}}{% else %}{{page.date}}{% endif %}",
         "isAccessibleForFree": "True",
         "isPartOf": {
-            "@type": ["CreativeWork", "Product", "Blog"],
+            "@type": ["CreativeWork"],
             "name": "WI+RE",
             "productID": "https://uclalibrary.github.io/research-tips/"
         },
