trying a different approach to embed code and sharing
several changes that get rid of the floating share button and replace with share buttons on the page. Placed on each post. Not ideal - more of an interim experiment.

--- a/_includes/embed-and-share.html
+++ b/_includes/embed-and-share.html
@@ -26,11 +26,10 @@
   
   
 
-
 <!-- This is the content of the Modal that pops up -->
 <div id="modal1" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <p>Copy and paste the html code below to embed this research strategy into your site:</p>
+      <p>Copy and paste the html code below to embed this strategy into your site:</p>
       
       <div class="highlighter-rouge">
 <pre class="highlight">
@@ -53,6 +52,7 @@
       <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Got it!</a>
     </div>
 </div>
+
 
 <!-- end embed code -->
 
