absolute_url doesn't work

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -84,7 +84,7 @@ layout: default
           </div>
           <div class="col-lg-7">
               <span class="align-middle">
-                <img class="featurette-image img-fluid mx-auto align-middle img-thumbnail tilt-right-2" src="{{ '/assets/images/wire-creative-team-2.jpg' | absolute_url }}" alt="WI+RE's creative team in the WI+RE studio">
+                <img class="featurette-image img-fluid mx-auto align-middle img-thumbnail tilt-right-2" src="{{ '/assets/images/wire-creative-team-2.jpg' | relative_url }}" alt="WI+RE's creative team in the WI+RE studio">
               </span>
           </div>
                 <div class="col-lg-4 p-2 mt-3">
