--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -73,7 +73,7 @@ layout: default
 </div>
           
           
-        <!-- START THE FEATURETTES -->
+        <!-- START THE FEATURETTES  -->
 
         <hr class="featurette-divider">
 
@@ -107,7 +107,7 @@ layout: default
             <p>Want to collaborate? We would too! Check out <a href="http://github.com/uclalibrary/research-tips" target="_blank">our code repository</a> and <a href="{{ '/contact' | absolute_url }}">let us know your ideas!</a></p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" src="{{ '/assets/images/icons/np_open-education_33913_1E4B88.png' | absolute_url }}" alt="Open Educational Resources">
+            <img class="featurette-image img-fluid mx-auto" src="{{ '/assets/images/icons/np_open-education_33913_1E4B88.png' | relative_url }}" alt="Open Educational Resources">
           </div>
         </div>
 
